minor spacing fixes

--- a/style.css
+++ b/style.css
@@ -349,6 +349,7 @@ header {
 .favorite-text {
   font-weight: 400;
   color: #a4a4a4;
+  line-height: 71%;
 }
 
 
@@ -370,7 +371,9 @@ header {
   gap: 24px;
   max-width: 577px;
 }
-
+.customer-intro h1 img{
+  padding-left: 30px;
+}
 .customer-highlight-span {
   
   border-radius: 20px;
@@ -603,6 +606,7 @@ header {
   border: 1px solid #ffffff;
   border-radius: 100px;
   padding: 12px 0;
+  line-height: 18px;
   cursor: pointer;
 }
 
@@ -845,7 +849,7 @@ header {
     transparent 360deg
   );
 
-  transition: --fill 5s ease-in-out;
+  transition: .5s ease;
 
   -webkit-mask: radial-gradient(
     circle,
@@ -1545,6 +1549,8 @@ footer {
       transparent var(--fill),
       transparent 360deg
     );
+
+    transition: --fill 1.5s ease;
   }
 
   .fruit-list {
